# pdf2md

./: .env.example  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml  zensical.toml
docs/: huggingface.md  index.md  reference.md  tests.md
skills/huggingface-inference-endpoints-pdf2md/: SKILL.md
src/pdf2md/: __init__.py  cli.py  converter.py
src/pdf2md/ocr/: __init__.py  backend.py  base.py  hf_endpoint.py  local.py
tests/: __init__.py  conftest.py  test_cli.py  test_converter.py  test_ocr_backend.py
